<resources>
    <string name="app_name">Frequency</string>

    <string name="title_activity_news">News</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="frequency_tagline">Important Audio News.</string>
    <string name="frequency_tagline_sec">Everyday.</string>
    <string name="radio_news_tagline">You\'re listening to</string>
    <string name="radio_news_tagline_sec">Today\'s news.</string>
    <string name="radio_news_share">Share</string>

</resources>
