<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_frequency_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="radionews.com.frequency.FrequencySplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/shape"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="200dp"
        android:id="@+id/app_logo" />

    <TextView
        android:text="@string/app_name"
        android:tag="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13.5dp"
        android:id="@+id/app_name"
        android:textSize="28sp" />

    <TextView
        android:text="@string/frequency_tagline"
        android:tag="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64.5dp"
        android:id="@+id/app_tag_line"
        android:layout_below="@+id/app_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/frequency_tagline_sec"
        android:tag="title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_tag_line"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/app_tag_line_sec" />

</RelativeLayout>
