<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_audio_news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="radionews.com.frequency.AudioNewsActivity">

    <ImageView
        android:id="@+id/frequency_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="102.5dp"
        app:srcCompat="@drawable/shape" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frequency_logo"
        android:layout_alignStart="@+id/frequency_logo"
        android:layout_below="@+id/frequency_logo"
        android:layout_marginTop="8.5dp"
        android:fontFamily="sans-serif"
        android:text="@string/radio_news_tagline" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="6dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:text="@string/radio_news_tagline_sec" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/date"
        android:layout_marginBottom="99dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/back" />

    <SeekBar
        android:id="@+id/news_seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/play_button"
        android:layout_marginTop="28dp"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <TextView
        android:id="@+id/news_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/play_button"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="TextView" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/play" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/news_seekbar"
        android:layout_alignLeft="@+id/news_seekbar"
        android:layout_alignStart="@+id/news_seekbar">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/share"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_news_share"
            android:gravity="center"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>
